<?xml version="1.0"?>
<package format="3">
  <name>dingo_gazebo</name>
  <version>0.1.1</version>
  <description>Launchfiles to use Dingo in Gazebo.</description>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>
  <author>Tony Baltovski</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>dingo_control</exec_depend>
  <exec_depend>dingo_description</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>

  <export>
    <!-- <gazebo_ros gazebo_media_path="${prefix}"/> -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
