<?xml version="1.0"?>
<package format="2">
  <name>dingo_simulator</name>
  <version>0.0.0</version>
  <description>Packages for simulating Dingo.</description>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>
  <author>Tony Baltovski</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend version_gte="0.1">dingo_gazebo</run_depend>

  <export><metapackage/></export>
</package>
