<?xml version="1.0"?>
<package format="3">
  <name>dingo_simulator</name>
  <version>0.1.0</version>
  <description>Packages for simulating Dingo.</description>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>
  <author>Tony Baltovski</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>dingo_gazebo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
